@startuml

class Address {
  +integer id
  +integer zip
  +string town
  +string street
  +string number
  +Person person
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
}

class Person {
  +string username
  +string lastname
  +string firstname
  +string email
  +string phone_number
  +string encrypted_password
  +string reset_password_token
  +datetime reset_password_sent_at
  +datetime remember_created_at
  +integer sign_in_count
  +datetime current_sign_in_at
  +datetime last_sign_in_at
  +string current_sign_in_ip
  +string last_sign_in_ip
  +integer student_status_id
  +integer teacher_status_id
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
  +string full_name()
  +boolean student?()
  +boolean teacher?()
  +boolean dean?()
  +boolean can_view_grade?(grade)
  +boolean can_manage_resources?()
}

class Teacher {
  +string iban
  +TeacherStatus teacher_status
  +SchoolClass[] school_classes
  +Course[] courses
  +Subject[] subjects
}

class Dean {

}

class Student {
  +StudentStatus student_status
  +Grade[] grades
  +boolean has_sufficient_grades?(school_class_id)
  +boolean has_warning_grades?(school_class_id)
}

class SchoolClass {
  +integer year
  +string name
  +Room room
  +Teacher master
  +Person[] people
  +Course[] courses
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
  +integer student_count()
}

class Course {
  +datetime start_at
  +datetime end_at
  +SchoolClass school_class
  +Subject subject
  +Teacher teacher
  +Term term
  +Examination[] examinations
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
  +string weekday_name()
}

class Subject {
  +string name
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
  +integer course_count()
}

class Term {
  +string name
  +datetime start_at
  +datetime end_at
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
  +Course[] courses
}

class Examination {
  +string title
  +Course course
  +Grade[] grades
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
  +string to_s()
  +json as_json()
}

class Grade {
  +decimal value
  +datetime effective_date
  +Examination examination
  +Person person
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
}

class Room {
  +string name
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
  +integer class_count()
}

class TeacherStatus {
  +string status
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
  +integer teacher_count()
}

class StudentStatus {
  +string status
  +datetime archived_at
  +datetime created_at
  +datetime updated_at
  +integer student_count()
}

' Relationships
Address "1" *-- "1" Person
Person "0..*" --o "1" StudentStatus
Person "0..*" --o "1" TeacherStatus
SchoolClass "0..*" -- "0..*" Person: students >
SchoolClass "1" *-- "0..*" Course
SchoolClass "1" *-- "1" Room
SchoolClass "0..1" --o "1" Person: master >
Course "1" *-- "1" Subject
Course "1" *-- "1" Term
Course "1" *-- "1" Person: teacher >
Examination "1" *-- "1" Course
Grade "1" *-- "1" Examination
Grade "1" *-- "1" Person: student >
Teacher --|> Person
Student --|> Person
Dean --|> Teacher

@enduml